--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "katas",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "mocha --recursive './challenges/*.spec.js'"
-  },
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "chai": "^4.3.6",
-    "jsdom": "^20.0.2",
-    "mocha": "^10.0.0"
-  }
+    "name": "katas",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "test": "mocha 'kata/*.spec.js'",
+        "prettier:write": "npx prettier --write ."
+    },
+    "author": "",
+    "license": "MIT",
+    "dependencies": {
+        "chai": "^4.3.6",
+        "jsdom": "^20.0.2",
+        "mocha": "^10.0.0"
+    },
+    "devDependencies": {
+        "prettier": "^2.8.4"
+    }
 }
